--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html {
 body {
     position: relative;
     font-family: 'Averia Serif Libre', cursive;
+    background-color: #ffffff;
 }
 
 .section-wrap {
